* Guider fixed for readable hops

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-sub-panel.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-sub-panel.scss
@@ -54,16 +54,24 @@
   flex-grow: 0;
   flex-shrink: 0;
   margin: 0 0 5px;
-
+  
+  @include breakpoint($breakpoint-desktop) {
+    flex-basis: 250px;
+    margin: 0 10px 0 0;
+  }
 } 
 
 .application-sub-panel__item-title--readable {
+  flex-basis: 100%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin: 0 0 5px;
+  
   @include breakpoint($breakpoint-desktop) {
     flex-basis: 250px;
-	margin: 0 10px 0 0;
+    margin: 0 10px 0 0;
   }
 }  
-
 
 .application-sub-panel__item-data {
 	align-items: center;
@@ -81,7 +89,7 @@
 } 
 
 // HOPS readonly override for rendering item-title and item-data
-.application-sub-panel__body--hops {
+.application-sub-panel__body--hops-readable {
 
   .application-sub-panel__item-title {
     flex-basis: 100%;
@@ -123,7 +131,6 @@
   padding: 20px;
 }
 
-
 .application-sub-panel__item--guider-basic-info {
   flex-basis: 50%;
   
@@ -133,20 +140,6 @@
   }  
 }
 
-.application-sub-panel__item--hops-readable {
-
-  > span {
-    flex-basis: 30%;
-    flex-shrink: 0;
-    flex-grow: 1;   
-  }
-
-  > span:first-child {
-    flex-basis: 70%;
-    flex-shrink: 1;
-    flex-grow: 2;   
-  }   
-}
 .application-sub-panel__item--hops-editable {
   flex-direction: column;
   align-items: flex-start;
@@ -160,7 +153,6 @@
     width: 100%;
   }
 }
-
 
 .application-sub-panel__item--guider-workspace-info {
   > span {
